<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ElpisRemote</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ip_port_label">Your IP</string>
    <string name="ip_port">192.168.1.64</string>
    <string name="play_button_string">Playing</string>
    <string name="pause_button_string">Paused</string>
    <string name="next_button_string">Next</string>
    <string name="like_button_string">Like</string>
    <string name="liked_button_string">Liked</string>
    <string name="dislike_button_string">Dislike</string>
    <string name="menu_song_update">Update Song Info</string>
    <string name="liste_label_long">Listen what\'s playing on Elpis</string>
    <string name="about_label">About</string>
    <string name="first_run_text">Thanks for using ElpisRemote. \nPlease do report any bugs you find at \nhttps://github.com/seliver/ElpisRemote</string>
    <string name="about_text">Thanks for using ElpisRemote. \nIf you have found a bug or have a suggestion, please create a new issue at \nhttps://github.com/seliver/ElpisRemote </string>
    <string name="about_title">© Alexey Seliverstov - 2015</string>

</resources>