<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="30dp"
    tools:context=".RemoteControl" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/LoadingSongText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loading song info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/LoadingSongPrograssBar"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:divider="@layout/empty_tall_divider"
        android:gravity="center"
        android:showDividers="middle" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ip_port_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ipandportvalue"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/ip_port" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_weight="0.10"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/songAndArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Song Name and Artist"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/coverImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:maxHeight="@android:dimen/thumbnail_height"
            android:maxWidth="@android:dimen/thumbnail_width"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.24"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <ProgressBar
                android:id="@+id/playPauseProgessBar"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_button_string" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:gravity="right"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_button_string" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.24"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <ProgressBar
                android:id="@+id/nextProgressBar"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:visibility="invisible" />

        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:layout_weight="0.02"
        android:divider="@layout/empty_tall_divider"
        android:dividerPadding="5dp"
        android:gravity="center_horizontal|fill_horizontal" >

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.24"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <ProgressBar
                android:id="@+id/likeProgressBar"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.53"
            android:gravity="left"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like_button_string" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonDislike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dislike_button_string" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.24"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <ProgressBar
                android:id="@+id/dislikeProgressBar"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:visibility="invisible" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>